--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ h3 {
 
 }
 
-.sale-offer-heading .highlighter, .shop-info .highlighter , .send-flowers .highlighter{
+.sale-offer-heading .highlighter, .shop-info .highlighter , .send-flowers .highlighter,  .featured-iteam .highlighter{
 
     color: #E55473;
 }
